--- a/docker-swarm-templates/docker-compose.minio.yml
+++ b/docker-swarm-templates/docker-compose.minio.yml
@@ -120,7 +120,7 @@ services:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER:?}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:?}
       MINIO_PROMETHEUS_AUTH_TYPE: public
-      MINIO_UPDATE: off
+      MINIO_UPDATE: "off"
 
     # VOLUMES:
     volumes:
