Add some additional config options to Grafana via env variables

--- a/docker-swarm-templates/docker-compose.grafana-stack.yml
+++ b/docker-swarm-templates/docker-compose.grafana-stack.yml
@@ -395,10 +395,27 @@ services:
 
     # ENVIRONMENT:
     environment:
-      GF_USERS_ALLOW_SIGN_UP: "false"
+      TRAEFIK_PATH_PREFIX_LOKI: ${TRAEFIK_PATH_PREFIX_LOKI:-}
       GF_SERVER_SERVE_FROM_SUB_PATH: "true"
       GF_SERVER_ROOT_URL: http://${TRAEFIK_DOMAIN:?}${TRAEFIK_PATH_PREFIX_GRAFANA:?}
-      TRAEFIK_PATH_PREFIX_LOKI: ${TRAEFIK_PATH_PREFIX_LOKI:-}
+      GF_USERS_ALLOW_SIGN_UP: ${GF_USERS_ALLOW_SIGN_UP:-false}
+      GF_AUTH_SAML_ENABLED: ${GF_AUTH_SAML_ENABLED:-false}
+      GF_AUTH_SAML_NAME: ${GF_AUTH_SAML_NAME:-}
+      GF_AUTH_SAML_AUTO_LOGIN: ${GF_AUTH_SAML_AUTO_LOGIN:-}
+      GF_AUTH_SAML_PRIVATE_KEY_PATH: ${GF_AUTH_SAML_PRIVATE_KEY_PATH:-}
+      GF_AUTH_SAML_CERTIFICATE_PATH: ${GF_AUTH_SAML_CERTIFICATE_PATH:-}
+      GF_AUTH_SAML_IDP_METADATA_URL: ${GF_AUTH_SAML_IDP_METADATA_URL:-}
+      GF_AUTH_SAML_ASSERTION_ATTRIBUTE_NAME: ${GF_AUTH_SAML_ASSERTION_ATTRIBUTE_NAME:-}
+      GF_AUTH_SAML_ASSERTION_ATTRIBUTE_LOGIN: ${GF_AUTH_SAML_ASSERTION_ATTRIBUTE_LOGIN:-}
+      GF_AUTH_SAML_ASSERTION_ATTRIBUTE_EMAIL: ${GF_AUTH_SAML_ASSERTION_ATTRIBUTE_EMAIL:-}
+      GF_AUTH_SAML_ASSERTION_ATTRIBUTE_GROUPS: ${GF_AUTH_SAML_ASSERTION_ATTRIBUTE_GROUPS:-}
+      GF_SMTP_ENABLED: ${GF_SMTP_ENABLED:-false}
+      GF_SMTP_HOST: ${GF_SMTP_HOST:-}
+      GF_SMTP_USER: ${GF_SMTP_USER:-}
+      GF_SMTP_PASSWORD: ${GF_SMTP_PASSWORD:-}
+      GF_SMTP_SKIP_VERIFY: ${GF_SMTP_SKIP_VERIFY:-}
+      GF_SMTP_FROM_ADDRESS: ${GF_SMTP_FROM_ADDRESS:-}
+      GF_SMTP_STARTTLS_POLICY: ${GF_SMTP_STARTTLS_POLICY:-}
 
     # VOLUMES:
     volumes:
