--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,9 +4,65 @@ on:
     branches: [master]
   schedule:
     # At 02:30 on Saturday
-    - cron: '30 2 * * 6'
+    - cron: "30 2 * * 6"
 
 jobs:
+  build-fluent-bit:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Use QEMU to build for other arch
+      - name: Set up QEMU
+        id: qemu
+        uses: docker/setup-qemu-action@v3
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
+
+      # Use docker buildx to build the docker image
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # List available build platforms
+      - name: Available platforms
+        if: success()
+        run: echo ${{ steps.buildx.outputs.platforms }}
+
+      # Log into registry
+      - name: Log into registry ${{ vars.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ vars.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Extract metadata for image build
+      - name: Extract Container metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ vars.REGISTRY }}/${{ vars.FLUENT_BIT_IMAGE_NAME }}
+
+      # Build and publish images
+      - name: Build and push Container image
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          context: docker/fluent-bit
+          pull: true
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: |
+            ${{ vars.REGISTRY }}/${{ vars.FLUENT_BIT_IMAGE_NAME }}:latest
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   build-swarm-stack-templates:
     runs-on: ubuntu-latest
     permissions:
