--- a/docker-swarm-templates/docker-compose.grafana-stack.yml
+++ b/docker-swarm-templates/docker-compose.grafana-stack.yml
@@ -48,6 +48,12 @@
 #   #-  - LOKI_DATA_PATH -
 #   #-    The Path to the Loki storage directory
 #   LOKI_DATA_PATH=./appdata/loki
+#   #-  - FLUENTBIT_STORAGE_PATH -
+#   #-    The Path to the Fluent-Bit storage directory
+#   FLUENTBIT_STORAGE_PATH=./appdata/graylog-stack/fluent-bit/storage
+#   #-  - FLUENTBIT_CERTS_PATH -
+#   #-    The Path to the Fluent-Bit certificates
+#   FLUENTBIT_CERTS_PATH=./appdata/graylog-stack/fluent-bit/certs
 #   #@ Prometheus Config
 #   #-  - PROMETHEUS_DEBUGGING -
 #   #-    Enable debugging
@@ -101,6 +107,51 @@
 #   #-  - SECRET_ACCESS_KEY -
 #   #-    The password for S3 bucket
 #   SECRET_ACCESS_KEY=supersecret
+#   #-  - FLUENT_BIT_TAG_PREFIX -
+#   #-    A tag to filter out records. Only records with a tag prefix matching this will be processed.
+#   FLUENT_BIT_TAG_PREFIX=flb_glf.
+#   #-  - FLUENTBIT_FORWARD_INPUT_SHARED_KEY -
+#   #-    The shared key of the TLS Forward input
+#   FLUENTBIT_FORWARD_INPUT_SHARED_KEY=123456789
+#   #-  - FLUENTBIT_ENABLE_FORWARD_INPUT_TLS -
+#   #-    Enable TLS for forward input. This will either use provided certificates or generate some self-signed certs on startup.
+#   FLUENTBIT_ENABLE_FORWARD_INPUT_TLS=true
+#   #-  - FLUENTBIT_USE_EXISTING_CERT -
+#   #-    Use existing certificates provided in the FLUENTBIT_EXISTING_CERT_PATH and FLUENTBIT_EXISTING_KEY_PATH variables
+#   FLUENTBIT_USE_EXISTING_CERT=true
+#   #-  - FLUENTBIT_EXISTING_CERT_PATH -
+#   #-    Path to an existing cert as it will appear inside the running container.
+#   FLUENTBIT_EXISTING_CERT_PATH=/etc/fluent-bit/certs/1.pem
+#   #-  - FLUENTBIT_EXISTING_KEY_PATH -
+#   #-    Path to an existing key as it will appear inside the running container.
+#   FLUENTBIT_EXISTING_KEY_PATH=/etc/fluent-bit/certs/1.key
+#   #-  - ENABLE_FLUENTBIT_GRAFANA_LOKI_OUTPUT -
+#   #-    Enable Fluent-Bit Loki output
+#   ENABLE_FLUENTBIT_GRAFANA_LOKI_OUTPUT=true
+#   #-  - ENABLE_FLUENTBIT_TLS_FORWARD_OUTPUT -
+#   #-    Enable Fluent-Bit TLS Forward output.
+#   ENABLE_FLUENTBIT_TLS_FORWARD_OUTPUT=false
+#   #-  - FLUENTBIT_TLS_FORWARD_OUTPUT_HOST -
+#   #-    The hostname of the Fluent-Bit TLS Forward output.
+#   FLUENTBIT_TLS_FORWARD_OUTPUT_HOST=
+#   #-  - FLUENTBIT_TLS_FORWARD_OUTPUT_PORT -
+#   #-    The connection port of the Fluent-Bit TLS Forward output.
+#   FLUENTBIT_TLS_FORWARD_OUTPUT_PORT=
+#   #-  - FLUENTBIT_TLS_FORWARD_OUTPUT_SHARED_KEY -
+#   #-    The shared key required to connect to the upstream TLS Forward input
+#   FLUENTBIT_TLS_FORWARD_OUTPUT_SHARED_KEY=
+#   #-  - FLUENTBIT_TLS_FORWARD_OUTPUT_VERIFY -
+#   #-    Configure TLS Forward output connection to verify TLS certificates
+#   FLUENTBIT_TLS_FORWARD_OUTPUT_VERIFY=
+#   #-  - ENABLE_FLUENTBIT_PT_FORWARD_OUTPUT -
+#   #-    Enable Fluent-Bit plain-text Forward output.
+#   ENABLE_FLUENTBIT_PT_FORWARD_OUTPUT=false
+#   #-  - FLUENTBIT_PT_FORWARD_OUTPUT_HOST -
+#   #-    The hostname of the Fluent-Bit plain-text Forward output.
+#   FLUENTBIT_PT_FORWARD_OUTPUT_HOST=
+#   #-  - FLUENTBIT_PT_FORWARD_OUTPUT_PORT -
+#   #-    The connection port of the Fluent-Bit plain-text Forward output.
+#   FLUENTBIT_PT_FORWARD_OUTPUT_PORT=
 # <config_end>
 #
 # ---------------
@@ -111,7 +162,9 @@
 #   >     ${GRAFANA_DATA_PATH:?} \
 #   >     ${PROMETHEUS_DATA_PATH:?} \
 #   >     ${ALERTMANAGER_DATA_PATH:?} \
-#   >     ${LOKI_DATA_PATH:?}
+#   >     ${LOKI_DATA_PATH:?} \
+#   >     ${FLUENTBIT_STORAGE_PATH:?} \
+#   >     ${FLUENTBIT_CERTS_PATH:?}
 #   > sudo chown 472:472 ${GRAFANA_DATA_PATH:?}
 #   > sudo chown 65534:65534 ${PROMETHEUS_DATA_PATH:?}
 #   > sudo chown 65534:65534 ${ALERTMANAGER_DATA_PATH:?}
@@ -125,6 +178,8 @@
 #   > echo && echo "$(cd "${PROMETHEUS_DATA_PATH:?}" && pwd)" && ls -la ${PROMETHEUS_DATA_PATH:?}
 #   > echo && echo "$(cd "${ALERTMANAGER_DATA_PATH:?}" && pwd)" && ls -la ${ALERTMANAGER_DATA_PATH:?}
 #   > echo && echo "$(cd "${LOKI_DATA_PATH:?}" && pwd)" && ls -la ${LOKI_DATA_PATH:?}
+#   > echo && echo "$(cd "${FLUENTBIT_STORAGE_PATH:?}" && pwd)" && ls -la ${FLUENTBIT_STORAGE_PATH:?}
+#   > echo && echo "$(cd "${FLUENTBIT_CERTS_PATH:?}" && pwd)" && ls -la ${FLUENTBIT_CERTS_PATH:?}
 # <script_end>
 #
 # ---------------
@@ -135,6 +190,11 @@ networks:
     #       be configured for manual container attachment
     external: true
   private-net:
+
+volumes:
+  # Location of the Letsencrypt acme-challenge
+  fluentbit_certbot_data:
+    driver: local
 
 x-environment-defaults:
   service:
@@ -968,6 +1028,110 @@ services:
         source: ${LOKI_DATA_PATH:?}
         target: /loki
 
+  # -- Fluent-Bit --
+  #
+  # Fluent Bit is a super fast, lightweight, and highly scalable logging and metrics processor and forwarder.
+  # It is the preferred choice for cloud and containerized environments.
+  #
+  loki-fluent-bit:
+    image: ghcr.io/josh5/loki-fluent-bit-input:latest
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: any
+        delay: 20s
+      placement:
+        constraints:
+          - ${LOKI_PLACEMENT_CONSTRAINT:-engine.labels.node-type==swarm-monitor}
+      resources:
+        limits:
+          memory: 400m
+        reservations:
+          memory: 100M
+    entrypoint:
+      - "sh"
+      - "-c"
+      - |
+        wait-for-it loki-mono:3100 --timeout=20 -- sleep 5
+        wait-for-it loki-gateway:3100 --timeout=20 -- sleep 5
+        exec /usr/bin/tini -- /entrypoint.sh
+
+    # NETWORK:
+    networks:
+      - swarm-public
+      - private-net
+    ports:
+      # Fluent Bit HTTP server (can be used for health checks)
+      - target: 2020
+        published: 2020
+        protocol: tcp
+        mode: host
+      # Fluent Bit log ingest ports
+      - target: 24280
+        published: 24280
+        protocol: tcp
+        mode: host
+      # Forward input configured with TLS certificates
+      - target: 24224
+        published: 24224
+        protocol: tcp
+        mode: host
+      - target: 24224
+        published: 24224
+        protocol: udp
+        mode: host
+      # Forward input configured PT only (for local docker logs, etc.)
+      - target: 24228
+        published: 24228
+        protocol: tcp
+        mode: host
+      - target: 24228
+        published: 24228
+        protocol: udp
+        mode: host
+
+    # ENVIRONMENT:
+    environment:
+      <<: *environment_defaults
+      # Application:
+      # -- Config
+      FLUENT_BIT_TAG_PREFIX: ${FLUENT_BIT_TAG_PREFIX:-flb_glf.}
+      FLUENT_STORAGE_PATH: /fluent-bit-data/storage
+      FORWARD_INPUT_SHARED_KEY: ${FLUENTBIT_FORWARD_INPUT_SHARED_KEY:-}
+      ENABLE_FORWARD_INPUT_TLS: ${FLUENTBIT_ENABLE_FORWARD_INPUT_TLS:-true}
+      USE_EXISTING_CERT: ${FLUENTBIT_USE_EXISTING_CERT:-false}
+      CERTIFICATES_DIRECTORY: /fluent-bit-data/certs
+      EXISTING_CERT_PATH: ${FLUENTBIT_EXISTING_CERT_PATH:-}
+      EXISTING_KEY_PATH: ${FLUENTBIT_EXISTING_KEY_PATH:-}
+      USE_CERTBOT_TO_GENERATE_KEY: ${USE_CERTBOT_TO_GENERATE_KEY:-false}
+      CERT_FQDN: ${CERT_FQDN:-}
+      CERT_EMAIL: ${CERT_EMAIL:-}
+      ENABLE_STDOUT_OUTPUT: ${ENABLE_FLUENTBIT_STDOUT_OUTPUT:-false}
+      ENABLE_GRAFANA_LOKI_OUTPUT: ${ENABLE_FLUENTBIT_GRAFANA_LOKI_OUTPUT:-false}
+      GRAFANA_LOKI_HOST: loki-gateway
+      GRAFANA_LOKI_PORT: 3100
+      GRAFANA_LOKI_URI: ${TRAEFIK_PATH_PREFIX_LOKI:-}/loki/api/v1/push
+      ENABLE_TLS_FORWARD_OUTPUT: ${ENABLE_FLUENTBIT_TLS_FORWARD_OUTPUT:-false}
+      TLS_FORWARD_OUTPUT_HOST: ${FLUENTBIT_TLS_FORWARD_OUTPUT_HOST:-}
+      TLS_FORWARD_OUTPUT_PORT: ${FLUENTBIT_TLS_FORWARD_OUTPUT_PORT:-}
+      TLS_FORWARD_OUTPUT_SHARED_KEY: ${FLUENTBIT_TLS_FORWARD_OUTPUT_SHARED_KEY:-}
+      TLS_FORWARD_OUTPUT_VERIFY: ${FLUENTBIT_TLS_FORWARD_OUTPUT_VERIFY:-off}
+      ENABLE_PT_FORWARD_OUTPUT: ${ENABLE_FLUENTBIT_PT_FORWARD_OUTPUT:-false}
+      PT_FORWARD_OUTPUT_HOST: ${FLUENTBIT_PT_FORWARD_OUTPUT_HOST:-}
+      PT_FORWARD_OUTPUT_PORT: ${FLUENTBIT_PT_FORWARD_OUTPUT_PORT:-}
+
+    # VOLUMES:
+    volumes:
+      - type: bind
+        source: ${FLUENTBIT_STORAGE_PATH:?}
+        target: /fluent-bit-data/storage
+      - type: bind
+        source: ${FLUENTBIT_CERTS_PATH:?}
+        target: /fluent-bit-data/certs
+      - type: volume
+        source: fluentbit_certbot_data
+        target: /var/www/certbot
+
   # -- Grafana Loki Gateway --
   #
   # Loki is a horizontally scalable, highly available, multi-tenant log aggregation system inspired by Prometheus.
@@ -1081,6 +1245,10 @@ services:
               auth_basic off;
             }
 
+            location /.well-known/acme-challenge/ {
+                root /var/www/certbot;
+            }
+
             location = $${TRAEFIK_PATH_PREFIX_LOKI:-}/ring {
               proxy_pass        http://loki-mono:3100\$$request_uri;
             }
@@ -1133,7 +1301,9 @@ services:
         EOF
         cat /etc/nginx/nginx.conf
 
+        echo "Running Nginx entrypoint..."
         /docker-entrypoint.sh nginx -g "daemon off;"
+        echo
 
     # NETWORK:
     networks:
@@ -1150,3 +1320,9 @@ services:
     environment:
       <<: *environment_defaults
       TRAEFIK_PATH_PREFIX_LOKI: ${TRAEFIK_PATH_PREFIX_LOKI:-}
+
+    # VOLUMES:
+    volumes:
+      - type: volume
+        source: fluentbit_certbot_data
+        target: /var/www/certbot
