--- a/docker-swarm-templates/docker-compose.grafana-stack.yml
+++ b/docker-swarm-templates/docker-compose.grafana-stack.yml
@@ -275,6 +275,8 @@ x-service-defaults:
           http_path_prefix: $${TRAEFIK_PATH_PREFIX_LOKI:-}
           grpc_listen_port: 9096
           grpc_server_max_concurrent_streams: 1000
+          grpc_server_max_recv_msg_size: ${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
+          grpc_server_max_send_msg_size: ${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
 
         schema_config:
           configs:
@@ -370,6 +372,9 @@ x-service-defaults:
           log_queries_longer_than: 5s
           compress_responses: true
           max_outstanding_per_tenant: 2048
+          grpc_client_config:
+            max_recv_msg_size: ${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
+            max_send_msg_size: ${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
 
         EOF
         cat /etc/loki/local-config.yaml
@@ -392,6 +397,8 @@ x-service-defaults:
       AWS_REGION: ${AWS_REGION:-}
       ACCESS_KEY_ID: ${ACCESS_KEY_ID:-}
       SECRET_ACCESS_KEY: ${SECRET_ACCESS_KEY:-}
+      GRPC_SERVER_MAX_RECV_MSG_SIZE: ${LOKI_GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}
+      GRPC_SERVER_MAX_SEND_MSG_SIZE: ${LOKI_GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}
 
 services:
   # -- Grafana  --
