--- a/docker-swarm-templates/docker-compose.grafana-stack.yml
+++ b/docker-swarm-templates/docker-compose.grafana-stack.yml
@@ -107,6 +107,17 @@
 #   #-  - SECRET_ACCESS_KEY -
 #   #-    The password for S3 bucket
 #   SECRET_ACCESS_KEY=supersecret
+#   #-  - LOKI_GRPC_SERVER_MAX_RECV_MSG_SIZE -
+#   #-    Limit on the size of a gRPC message this server can receive (bytes).
+#   LOKI_GRPC_SERVER_MAX_RECV_MSG_SIZE=
+#   #-  - LOKI_GRPC_SERVER_MAX_SEND_MSG_SIZE -
+#   #-    Limit on the size of a gRPC message this server can send (bytes).
+#   LOKI_GRPC_SERVER_MAX_SEND_MSG_SIZE=
+#   #-  - LOKI_REJECT_OLD_SAMPLES_MAX_AGE -
+#   #-      # Oldest day-table offset (from today, inclusive) to build blooms for. 1 till
+#   #-      #   yesterday, 2 till day before yesterday and so on. This can be used to lower
+#   #-      #   cost by not trying to build blooms for older data which doesn't change.
+#   LOKI_REJECT_OLD_SAMPLES_MAX_AGE=24h
 #   #-  - FLUENT_BIT_TAG_PREFIX -
 #   #-    A tag to filter out records. Only records with a tag prefix matching this will be processed.
 #   FLUENT_BIT_TAG_PREFIX=flb_glf.
@@ -275,8 +286,8 @@ x-service-defaults:
           http_path_prefix: $${TRAEFIK_PATH_PREFIX_LOKI:-}
           grpc_listen_port: 9096
           grpc_server_max_concurrent_streams: 1000
-          grpc_server_max_recv_msg_size: ${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
-          grpc_server_max_send_msg_size: ${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
+          grpc_server_max_recv_msg_size: $${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
+          grpc_server_max_send_msg_size: $${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
 
         schema_config:
           configs:
@@ -325,7 +336,7 @@ x-service-defaults:
 
         limits_config:
           reject_old_samples: true
-          reject_old_samples_max_age: 24h
+          reject_old_samples_max_age: $${REJECT_OLD_SAMPLES_MAX_AGE:-24h}
           allow_structured_metadata: true
           volume_enabled: true
           retention_period: 672h
@@ -373,8 +384,8 @@ x-service-defaults:
           compress_responses: true
           max_outstanding_per_tenant: 2048
           grpc_client_config:
-            max_recv_msg_size: ${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
-            max_send_msg_size: ${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
+            max_recv_msg_size: $${GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}  # Default 20MB
+            max_send_msg_size: $${GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}  # Default 20MB
 
         EOF
         cat /etc/loki/local-config.yaml
@@ -399,6 +410,7 @@ x-service-defaults:
       SECRET_ACCESS_KEY: ${SECRET_ACCESS_KEY:-}
       GRPC_SERVER_MAX_RECV_MSG_SIZE: ${LOKI_GRPC_SERVER_MAX_RECV_MSG_SIZE:-20971520}
       GRPC_SERVER_MAX_SEND_MSG_SIZE: ${LOKI_GRPC_SERVER_MAX_SEND_MSG_SIZE:-20971520}
+      REJECT_OLD_SAMPLES_MAX_AGE: ${LOKI_REJECT_OLD_SAMPLES_MAX_AGE:-24h}
 
 services:
   # -- Grafana  --
