Fix a bug where ENABLE_STDOUT_OUTPUT was always being enabled

--- a/docker-swarm-templates/docker-compose.grafana-stack.yml
+++ b/docker-swarm-templates/docker-compose.grafana-stack.yml
@@ -1178,7 +1178,7 @@ services:
       PT_FORWARD_INPUT_SHARED_KEY: ${FLUENTBIT_PT_FORWARD_INPUT_SHARED_KEY:-}
       # -> Outputs
       # |--> STDOUT Output
-      ENABLE_STDOUT_OUTPUT: ${ENABLE_FLUENTBIT_STDOUT_OUTPUT:-true}
+      ENABLE_STDOUT_OUTPUT: ${ENABLE_FLUENTBIT_STDOUT_OUTPUT:-false}
       # |--> Grafana Loki Output
       ENABLE_GRAFANA_LOKI_OUTPUT: ${ENABLE_FLUENTBIT_GRAFANA_LOKI_OUTPUT:-true}
       GRAFANA_LOKI_HOST: loki-gateway
