Update fluent-bit image to be more configurable
Adds some better standard filtering and formatting of logs.
Ensures all JSON logs are flattened. This just makes things easier to search.

--- a/docker/fluent-bit/Dockerfile
+++ b/docker/fluent-bit/Dockerfile
@@ -41,9 +41,13 @@ ENV \
     FLUENT_BIT_LOG_LEVEL=info \
     FLUENT_BIT_TAG_PREFIX=flb_glf. \
     HOST_HOSTNAME=grafana-fluent-bit \
-    FORWARD_INPUT_SHARED_KEY=1234567890 \
-    ENABLE_TLS_ON_FORWARD_INPUT=true \
     FLUENT_STORAGE_PATH=/var/fluent-bit/storage \
+    ENABLE_HTTP_INPUT=false \
+    HTTP_INPUT_PORT=24280 \
+    ENABLE_TLS_FORWARD_INPUT=false \
+    TLS_FORWARD_INPUT_PORT=24224 \
+    TLS_FORWARD_INPUT_SHARED_KEY=1234567890 \
+    TLS_FORWARD_INPUT_VERIFY=off \
     CERTIFICATES_DIRECTORY=/etc/fluent-bit/certs \
     USE_EXISTING_CERT=false \
     EXISTING_KEY_PATH=/etc/fluent-bit/certs/1.key \
@@ -51,13 +55,22 @@ ENV \
     USE_CERTBOT_TO_GENERATE_KEY=false \
     CERT_FQDN=example.com \
     CERT_EMAIL=admin@example.com \
+    ENABLE_PT_FORWARD_INPUT=false \
+    PT_FORWARD_INPUT_PORT=24228 \
+    PT_FORWARD_INPUT_SHARED_KEY=1234567890 \
     ENABLE_STDOUT_OUTPUT=false \
     ENABLE_GRAFANA_LOKI_OUTPUT=false \
     GRAFANA_LOKI_HOST=loki \
     GRAFANA_LOKI_PORT=3100 \
     GRAFANA_LOKI_URI=/logs/loki/api/v1/push \
     ENABLE_TLS_FORWARD_OUTPUT=false \
-    ENABLE_PT_FORWARD_OUTPUT=false
+    TLS_FORWARD_OUTPUT_HOST=tls-fluent-bit-upstream \
+    TLS_FORWARD_OUTPUT_PORT=24224 \
+    TLS_FORWARD_OUTPUT_SHARED_KEY=1234567890 \
+    TLS_FORWARD_OUTPUT_VERIFY=off \
+    ENABLE_PT_FORWARD_OUTPUT=false \
+    PT_FORWARD_OUTPUT_HOST=pt-fluent-bit-upstream \
+    PT_FORWARD_OUTPUT_PORT=24224
 
 ENTRYPOINT ["/usr/bin/tini", "--", "/entrypoint.sh"]
 CMD []
