--- a/tests/send-dummy-logs-to-loki/fluent-bit.yaml
+++ b/tests/send-dummy-logs-to-loki/fluent-bit.yaml
@@ -4,8 +4,8 @@
 # File Created: Tuesday, 29th October 2024 1:45:30 pm
 # Author: Josh5 (jsunnex@gmail.com)
 # -----
-# Last Modified: Wednesday, 20th November 2024 11:51:18 am
-# Modified By: Josh5 (jsunnex@gmail.com)
+# Last Modified: Monday, 23rd June 2025 2:44:27 am
+# Modified By: Josh.5 (jsunnex@gmail.com)
 ###
 
 # service configuration
@@ -74,20 +74,28 @@ service:
 
 pipeline:
   inputs:
-    # HTTP input to sit behind an LB
+    # Dummy input
     - name: dummy
-      tag: test
+      tag: flb_glf.dummy
 
   outputs:
     - name: stdout
       match: '*'
 
-    # Grafana Loki output
-    - name: loki
-      match: '*'
-      host: ${HOST_IP}
-      port: 3100
-      uri: /logs/loki/api/v1/push
-      tls: off
-      labels: input=flb
-      line_format: json
+    # # Grafana Loki output
+    # - name: loki
+    #   match: '*'
+    #   host: ${HOST_IP}
+    #   port: 3100
+    #   uri: /logs/loki/api/v1/push
+    #   tls: off
+    #   labels: input=flb
+    #   line_format: json
+
+    # # Fluent Bit PT forward input
+    # - name: forward
+    #   match: flb_glf.*
+    #   host: ${HOST_IP}
+    #   port: 24228
+    #   tls: off
+    #   shared_key: 123456789
