--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,10 +3,10 @@ name: Publish
 on:
   workflow_dispatch:
   push:
-    branches: ["feature-**", "fix-**", staging, master]
+    branches: ['feature-**', 'fix-**', staging, master]
   schedule:
     # At 02:30 on Saturday
-    - cron: "30 2 * * 6"
+    - cron: '30 2 * * 6'
 
 jobs:
   build-fluent-bit:
